fix: adjusted scrollbar style

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -18,5 +18,5 @@ body {
 
 .fancy-scroll::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #340046;
+  background-color: #ffbf33;
 }
